--- a/.github/workflows/codacy_scan.yml
+++ b/.github/workflows/codacy_scan.yml
@@ -16,10 +16,10 @@ name: Codacy Security Scan
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "devel-test" ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "master" ]
+    branches: [ "devel-test" ]
   schedule:
     # Automatic scan on everey day at 00:00
     # Minute: 00
