--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/tmux-test"]
-	path = lib/tmux-test
-	url = https://github.com/tmux-plugins/tmux-test.git
+[submodule "lib/tmux-test-docker"]
+	path = lib/tmux-test-docker
+	url = https://github.com/slange-dev/tmux-test-docker.git
